--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -57,3 +57,14 @@ jobs:
                   slot-name: 'Production'
                   package: .
                   publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B408F1FA702C414EBD92E3521D98D7CE }}
+
+            - name: Set startup command
+              uses: azure/cli@v1
+              with:
+                inlineScript: |
+                  az login --service-principal -u ${{ secrets.AZURE_CLIENT_ID }} -p ${{ secrets.AZURE_CLIENT_SECRET }} --tenant ${{ secrets.AZURE_TENANT_ID }}
+                  az webapp config set \
+                    --name ${{ secrets.AZURE_WEBAPP_NAME }} \
+                    --resource-group ${{ secrets.AZURE_RESOURCE_GROUP_NAME }} \
+                    --startup-file ./azure/azure-startup.sh
+
