--- a/.github/workflows/security.yml
+++ b/.github/workflows/security.yml
@@ -31,23 +31,17 @@ jobs:
                   curl -sSfL https://github.com/gitleaks/gitleaks/releases/download/v8.28.0/gitleaks_8.28.0_linux_x64.tar.gz | tar -xz
                   
                   # Run Gitleaks scan
-                  ./gitleaks detect --config=.gitleaks.toml --verbose --report-format=sarif --report-path=gitleaks-report.sarif || exit_code=$?
+                  echo "🔍 Running Gitleaks secret scan..."
+                  ./gitleaks detect --config=.gitleaks.toml --verbose || exit_code=$?
                   
-                  # If leaks found, fail the job
+                  # Check results
                   if [ "${exit_code:-0}" -eq 1 ]; then
-                      echo "🔒 Gitleaks found secrets in the repository!"
-                      ./gitleaks detect --config=.gitleaks.toml --verbose
+                      echo "❌ Gitleaks found potential secrets in the repository!"
+                      echo "Please review the findings above and remove any secrets before merging."
                       exit 1
                   fi
                   
-                  echo "✅ No secrets detected by Gitleaks"
-            
-            - name: Upload SARIF file
-              if: always()
-              uses: github/codeql-action/upload-sarif@v3
-              with:
-                  sarif_file: gitleaks-report.sarif
-                  category: gitleaks
+                  echo "✅ No secrets detected by Gitleaks - repository is clean!"
 
     dependency-scan:
         name: Dependency Security Scan
