--- a/.env.example
+++ b/.env.example
@@ -1,61 +1,39 @@
-APP_NAME=price-updater
+APP_NAME=Laravel
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
-APP_URL="https://price-updater.ddev.site:8443"
-
-APP_LOCALE=el
-APP_FALLBACK_LOCALE=en
-APP_FAKER_LOCALE=en_US
-
-APP_MAINTENANCE_DRIVER=file
-# APP_MAINTENANCE_STORE=database
-
-PHP_CLI_SERVER_WORKERS=4
-
-BCRYPT_ROUNDS=12
+APP_URL=http://localhost
 
 LOG_CHANNEL=stack
-LOG_STACK=single
 LOG_DEPRECATIONS_CHANNEL=null
 LOG_LEVEL=debug
 
-DB_CONNECTION="mysql"
-DB_PORT="3306"
-DB_HOST="db"
-DB_DATABASE="db"
-DB_USERNAME="db"
-DB_PASSWORD="db"
+DB_CONNECTION=mysql
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_DATABASE=laravel
+DB_USERNAME=root
+DB_PASSWORD=
 
-SESSION_DRIVER=database
-SESSION_LIFETIME=120
-SESSION_ENCRYPT=false
-SESSION_PATH=/
-SESSION_DOMAIN=null
-SESSION_SECURE_COOKIE=true
-SESSION_SAME_SITE=lax
-SESSION_HTTP_ONLY=true
-
-BROADCAST_CONNECTION=log
+BROADCAST_DRIVER=log
+CACHE_DRIVER=file
 FILESYSTEM_DISK=local
-QUEUE_CONNECTION=database
-
-CACHE_STORE=file
-# CACHE_PREFIX=
+QUEUE_CONNECTION=sync
+SESSION_DRIVER=file
+SESSION_LIFETIME=120
 
 MEMCACHED_HOST=127.0.0.1
 
-REDIS_CLIENT=phpredis
 REDIS_HOST=127.0.0.1
 REDIS_PASSWORD=null
 REDIS_PORT=6379
 
-MAIL_MAILER="smtp"
-MAIL_SCHEME=null
-MAIL_HOST="127.0.0.1"
-MAIL_PORT="1025"
+MAIL_MAILER=smtp
+MAIL_HOST=mailpit
+MAIL_PORT=1025
 MAIL_USERNAME=null
 MAIL_PASSWORD=null
+MAIL_ENCRYPTION=null
 MAIL_FROM_ADDRESS="hello@example.com"
 MAIL_FROM_NAME="${APP_NAME}"
 
@@ -65,22 +43,44 @@ AWS_DEFAULT_REGION=us-east-1
 AWS_BUCKET=
 AWS_USE_PATH_STYLE_ENDPOINT=false
 
-VITE_APP_NAME="${APP_NAME}"
-VITE_DEV_URL="https://cahtbot-backoffice.ddev.site"
-VITE_APP_PORT="8443"
-VITE_DEV_PORT="5179"
+PUSHER_APP_ID=
+PUSHER_APP_KEY=
+PUSHER_APP_SECRET=
+PUSHER_HOST=
+PUSHER_PORT=443
+PUSHER_SCHEME=https
+PUSHER_APP_CLUSTER=mt1
 
-# "native" or "ddev".If in production, this is not needed since it will only read tne .env file
-APP_DEVELOPMENT_ENV="ddev"
+VITE_APP_NAME="${APP_NAME}"
+VITE_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
+VITE_PUSHER_HOST="${PUSHER_HOST}"
+VITE_PUSHER_PORT="${PUSHER_PORT}"
+VITE_PUSHER_SCHEME="${PUSHER_SCHEME}"
+VITE_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
 
 # the default user password for the seeder users
-DEFAULT_USER_PASSWORD_FOR_SEEDER=test123
+DEFAULT_USER_PASSWORD_FOR_SEEDER=
 
-API_ALLOWED_IPS=ip-address-1,ip-address-2
-API_RATE_LIMIT="60,1" # 60 requests per 1 minute
+API_ALLOWED_IPS=127.0.0.1,192.168.1.1
+API_RATE_LIMIT=60,1
+
+SENTRY_LARAVEL_DSN=
 
 # Altcha CAPTCHA configuration
 # Required, sort of like a password
-ALTCHA_HMAC_KEY=scify123
+ALTCHA_HMAC_KEY=
 # Optional, defaults to SHA-256. Can be SHA-384 or SHA-512
 # ALTCHA_ALGORITHM="SHA-256"
+
+# Prices API
+PRICES_API_CLIENT_ID=
+PRICES_API_CLIENT_SECRET=
+PRICES_API_TOKEN_URL=
+PRICES_API_BASE_URL=
+
+# Microsoft Entra ID
+MICROSOFT_CLIENT_ID=
+MICROSOFT_CLIENT_SECRET=
+MICROSOFT_TENANT_ID=
+MICROSOFT_REDIRECT_URI=
