--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
 		"laravel/tinker": "^2.10.1",
 		"scify/laravel-cookie-guard": "^4.1",
 		"sentry/sentry-laravel": "^4.13",
+		"socialiteproviders/microsoft": "^4.6",
 		"spatie/laravel-permission": "^6.16",
 		"tightenco/ziggy": "^2.4"
 	},
