--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -71,9 +71,7 @@ jobs:
     deploy:
         runs-on: ubuntu-latest
         needs: build
-        # OIDC login requires id-token permission
         permissions:
-            id-token: write
             contents: read
 
         env:
@@ -86,12 +84,10 @@ jobs:
               with:
                   name: php-app
 
-            - name: Azure login (OIDC)
-              uses: azure/login@v2
+            - name: Azure login (Service Principal)
+              uses: azure/login@v1
               with:
-                  client-id: ${{ secrets.AZURE_CLIENT_ID }}
-                  tenant-id: ${{ secrets.AZURE_TENANT_ID }}
-                  subscription-id: ${{ secrets.AZURE_SUBSCRIPTION_ID }}
+                  creds: '{"clientId":"${{ secrets.AZURE_CLIENT_ID }}","clientSecret":"${{ secrets.AZURE_CLIENT_SECRET }}","subscriptionId":"${{ secrets.AZURE_SUBSCRIPTION_ID }}","tenantId":"${{ secrets.AZURE_TENANT_ID }}"}'
 
             - name: Get runner public IP
               id: ip
