--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -154,14 +154,11 @@ jobs:
                     --resource-group "$RG" \
                     --linux-fx-version "PHP|8.4"
 
-                  # Ensure the startup script has execute permissions
-                  chmod +x ./azure/azure-startup.sh
-
                   # Set the startup command
                   az webapp config set \
                     --name "$APP" \
                     --resource-group "$RG" \
-                    --startup-file "./azure/azure-startup.sh"
+                    --startup-file "bash azure/azure-startup.sh"
 
                   # Verify the startup command was set
                   echo "Verifying startup command..."
