--- a/azure/nginx_laravel.conf
+++ b/azure/nginx_laravel.conf
@@ -1,18 +1,20 @@
 server {
+    # Azure listens on 8080
     listen 8080;
     listen [::]:8080;
 
+    # Laravel public
     root /home/site/wwwroot/public;
+    index index.php index.html index.htm;
+    charset utf-8;
 
+    # Security headers (fine to keep)
     add_header X-Frame-Options "SAMEORIGIN";
     add_header X-XSS-Protection "1; mode=block";
     add_header X-Content-Type-Options "nosniff";
     add_header Referrer-Policy "no-referrer-when-downgrade";
 
-    index index.php index.html index.htm;
-
-    charset utf-8;
-
+    # Laravel front controller
     location / {
         try_files $uri $uri/ /index.php?$query_string;
     }
@@ -22,15 +24,33 @@ server {
 
     error_page 404 /index.php;
 
+    # Deny access to hidden files and env/config
+    location ~ /\.(?!well-known) {
+        deny all;
+    }
+    location ~* \.(env|env\.example|git|lock|sql|bak)$ {
+        deny all;
+    }
+
+    # PHP handling
     location ~ \.php$ {
         fastcgi_split_path_info ^(.+?\.php)(/.*)$;
         fastcgi_pass 127.0.0.1:9000;
         fastcgi_index index.php;
         include fastcgi_params;
 
+        # Be explicit; some defaults vary
+        fastcgi_param DOCUMENT_ROOT $document_root;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
-        fastcgi_param PATH_INFO $fastcgi_path_info;
-        fastcgi_param QUERY_STRING $query_string;
+        fastcgi_param SCRIPT_NAME     $fastcgi_script_name;
+        fastcgi_param PATH_INFO       $fastcgi_path_info;
+        fastcgi_param QUERY_STRING    $query_string;
+
+        # Honor HTTPS from Azure’s front end
+        fastcgi_param HTTPS $https if_not_empty;
+        if ($http_x_forwarded_proto = 'https') {
+            set $https on;
+        }
 
         fastcgi_intercept_errors on;
         fastcgi_connect_timeout 300;
@@ -42,7 +62,6 @@ server {
         fastcgi_temp_file_write_size 256k;
     }
 
-    location ~ /\.ht {
-        deny all;
-    }
+    # Optional: allow larger uploads for Laravel (increase if you need)
+    client_max_body_size 32m;
 }
