--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -148,8 +148,21 @@ jobs:
                   package: .
                   publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_B408F1FA702C414EBD92E3521D98D7CE }}
 
-            - name: Ensure startup script is executable
-              run: git update-index --chmod=+x azure/azure-startup.sh || true
+            - name: Reset the startup script
+              run: |
+                  az webapp config set \
+                    --name "$APP" \
+                    --resource-group "$RG" \
+                    --startup-file ""
+
+            - name: Prepare startup script (permissions & line endings)
+              run: |
+                if command -v dos2unix >/dev/null 2>&1; then
+                  dos2unix azure/azure-startup.sh || true
+                else
+                  sed -i 's/\r$//' azure/azure-startup.sh || true
+                fi
+                git update-index --chmod=+x azure/azure-startup.sh || true
 
             - name: Configure web app for custom startup
               run: |
@@ -170,7 +183,6 @@ jobs:
                     --name "$APP" \
                     --resource-group "$RG" \
                     --startup-file "bash -lc 'cp /home/site/wwwroot/azure/nginx_laravel.conf /etc/nginx/sites-enabled/default && service nginx reload || true; /home/site/wwwroot/azure/azure-startup.sh'"
-
 
             - name: Restart App Service
               run: |
