--- a/.github/workflows/release_cobrabot.yml
+++ b/.github/workflows/release_cobrabot.yml
@@ -182,7 +182,7 @@ jobs:
                   az webapp config set \
                     --name "$APP" \
                     --resource-group "$RG" \
-                    --startup-file "bash -lc 'cp /home/site/wwwroot/azure/nginx_laravel.conf /etc/nginx/sites-enabled/default && service nginx reload || true && /home/site/wwwroot/azure/azure-startup.sh'"
+                    --startup-file "/bin/sh -c '/home/site/wwwroot/azure/azure-startup.sh'"
 
             - name: Restart App Service
               run: |
