Enhance nginx configuration handling in startup script and update Laravel site config installation

--- a/azure/nginx_laravel.conf
+++ b/azure/nginx_laravel.conf
@@ -39,18 +39,12 @@ server {
         fastcgi_index index.php;
         include fastcgi_params;
 
-        # Be explicit; some defaults vary
         fastcgi_param DOCUMENT_ROOT $document_root;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param SCRIPT_NAME     $fastcgi_script_name;
         fastcgi_param PATH_INFO       $fastcgi_path_info;
         fastcgi_param QUERY_STRING    $query_string;
-
-        # Honor HTTPS from Azure’s front end
-        fastcgi_param HTTPS $https if_not_empty;
-        if ($http_x_forwarded_proto = 'https') {
-            set $https on;
-        }
+        fastcgi_param HTTP_X_FORWARDED_PROTO $http_x_forwarded_proto;
 
         fastcgi_intercept_errors on;
         fastcgi_connect_timeout 300;
