--- a/azure/nginx_laravel.conf
+++ b/azure/nginx_laravel.conf
@@ -57,7 +57,9 @@ server {
 
         # Keep connections alive to prevent 502 errors
         fastcgi_keep_conn on;
-        fastcgi_next_upstream error timeout invalid_header http_500 http_502 http_503;
+
+        # Retriable conditions for FastCGI upstreams (valid tokens)
+        fastcgi_next_upstream error timeout invalid_header http_500 http_503;
     }
 
     # Optional: allow larger uploads for Laravel (increase if you need)
